force-app/main/default/objects/Contact/fields/Corporate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Contact</label>
    <type>Checkbox</type>
</CustomField>