force-app/main/default/objects/Contact/fields/CorporateExecutive__c.field-meta.xml
<CustomField>
    <fullName>CorporateExecutive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Executive</label>
    <type>Checkbox</type>
</CustomField>