force-app/main/default/objects/Contact/fields/Dependent_1_Gender__c.field-meta.xml
<CustomField>
    <fullName>Dependent_1_Gender__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 1 Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>