force-app/main/default/objects/Contact/fields/Dependent_1_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Dependent_1_Heart_Conditions_Other__c</fullName>
    <description>HK Support web form only</description>
    <label>Dependent 1 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>