force-app/main/default/objects/Contact/fields/Dependent_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_1_Last_Name__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>