force-app/main/default/objects/Contact/fields/Dependent_2_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_Heart_Conditions_Other__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 2 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>