force-app/main/default/objects/Contact/fields/Dependent_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_Last_Name__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Dependent 2 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>