force-app/main/default/objects/Contact/fields/Dependent_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_Type__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Dependent 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Kid</fullName>
            </value>
            <value>
                <fullName>Heart Kid Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Angel Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Angel</fullName>
            </value>
            <value>
                <fullName>Child of Heart Kid Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>