force-app/main/default/objects/Contact/fields/Dependent_3_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Dependent_3_Heart_Conditions_Other__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Dependent 3 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>