force-app/main/default/objects/Contact/fields/Donor_Emails__c.field-meta.xml
<CustomField>
    <fullName>Donor_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Emails</label>
    <type>Checkbox</type>
</CustomField>