force-app/main/default/objects/Contact/fields/Donor_Phone_Calls__c.field-meta.xml
<CustomField>
    <fullName>Donor_Phone_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Phone Calls</label>
    <type>Checkbox</type>
</CustomField>