force-app/main/default/objects/Contact/fields/Donor_Phone_Calls_Backup__c.field-meta.xml
<CustomField>
    <fullName>Donor_Phone_Calls_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Phone Calls Backup</label>
    <type>Checkbox</type>
</CustomField>