force-app/main/default/objects/Contact/fields/Donor_SMS__c.field-meta.xml
<CustomField>
    <fullName>Donor_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor SMS</label>
    <type>Checkbox</type>
</CustomField>