force-app/main/default/objects/Contact/fields/Donor_SMS_Backup__c.field-meta.xml
<CustomField>
    <fullName>Donor_SMS_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor SMS Backup</label>
    <type>Checkbox</type>
</CustomField>