force-app/main/default/objects/Contact/fields/Duplicate_Contact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to when duplicate record found then it will mark as true.</description>
    <label>Duplicate Contact Flag</label>
    <type>Checkbox</type>
</CustomField>