force-app/main/default/objects/Contact/fields/Emergency_Contact_Name_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name_Alternative__c</fullName>
    <label>Emergency Contact Name Alternative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>