force-app/main/default/objects/Contact/fields/Emergency_Contact_Number_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number_Alternative__c</fullName>
    <label>Emergency Contact Number Alternative</label>
    <length>20</length>
    <type>Text</type>
</CustomField>