force-app/main/default/objects/Contact/fields/Emergency_Contact_Relationship_Alt__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship_Alt__c</fullName>
    <label>Emergency Contact Relationship Alt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>