force-app/main/default/objects/Contact/fields/Family_Matching_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Family_Matching_Consent_Given__c</fullName>
    <label>Family Matching Consent Given</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Share Contact Details</fullName>
            </value>
            <value>
                <fullName>Family Matching</fullName>
            </value>
            <value>
                <fullName>Regional Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>