force-app/main/default/objects/Contact/fields/Filled_Out_Test_Form__c.field-meta.xml
<CustomField>
    <fullName>Filled_Out_Test_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled Out Test Form</label>
    <type>Checkbox</type>
</CustomField>