force-app/main/default/objects/Contact/fields/First_Nations_Org_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Nations_Org_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Nations Org/ Contact</label>
    <type>Checkbox</type>
</CustomField>