force-app/main/default/objects/Contact/fields/Follow_Up_Actions__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Actions__c</fullName>
    <label>Follow-Up Actions</label>
    <type>TextArea</type>
</CustomField>