force-app/main/default/objects/Contact/fields/Former_HKL_Staff__c.field-meta.xml
<CustomField>
    <fullName>Former_HKL_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former HKL Staff</label>
    <type>Checkbox</type>
</CustomField>