force-app/main/default/objects/Contact/fields/From_HL_Community_SignUp_Form__c.field-meta.xml
<CustomField>
    <fullName>From_HL_Community_SignUp_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HL Community Contact</label>
    <type>Checkbox</type>
</CustomField>