force-app/main/default/objects/Contact/fields/Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraiser</label>
    <type>Checkbox</type>
</CustomField>