force-app/main/default/objects/Contact/fields/Funraisin__Is_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Is_Fundraiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fundraiser</label>
    <type>Checkbox</type>
</CustomField>