force-app/main/default/objects/Contact/fields/Funraisin__Optin__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Optin__c</fullName>
    <label>Optin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>