force-app/main/default/objects/Contact/fields/Giving_Status__c.field-meta.xml
<CustomField>
    <fullName>Giving_Status__c</fullName>
    <label>Giving Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Very Lapsed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Decreased Active</fullName>
                <isActive>false</isActive>
                <label>Decreased Active</label>
            </value>
            <value>
                <fullName>Increased Active</fullName>
                <isActive>false</isActive>
                <label>Increased Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>