force-app/main/default/objects/Contact/fields/GovernmentMinister__c.field-meta.xml
<CustomField>
    <fullName>GovernmentMinister__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government - Minister</label>
    <type>Checkbox</type>
</CustomField>