force-app/main/default/objects/Contact/fields/GovernmentMP__c.field-meta.xml
<CustomField>
    <fullName>GovernmentMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government – MP</label>
    <type>Checkbox</type>
</CustomField>