force-app/main/default/objects/Contact/fields/GovernmentSenator__c.field-meta.xml
<CustomField>
    <fullName>GovernmentSenator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government - Senator</label>
    <type>Checkbox</type>
</CustomField>