force-app/main/default/objects/Contact/fields/GovernmentStaffer__c.field-meta.xml
<CustomField>
    <fullName>GovernmentStaffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government – Staffer</label>
    <type>Checkbox</type>
</CustomField>