force-app/main/default/objects/Contact/fields/H4HK_DNR_CM__c.field-meta.xml
<CustomField>
    <fullName>H4HK_DNR_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on page layout, will be ticked by PB the first time a Contact is associated to the H4HK DNR Campaign to avoid Oppty Upon Create PB erroring when Contact donates multiple times</description>
    <label>H4HK DNR CM</label>
    <type>Checkbox</type>
</CustomField>