force-app/main/default/objects/Contact/fields/Has_a_Pacemaker__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Pacemaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has a Pacemaker</label>
    <type>Checkbox</type>
</CustomField>