force-app/main/default/objects/Contact/fields/Has_an_ICD__c.field-meta.xml
<CustomField>
    <fullName>Has_an_ICD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has an ICD</label>
    <type>Checkbox</type>
</CustomField>