force-app/main/default/objects/Contact/fields/HCP_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>HCP_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This confirms the HCP has agreed to receiving HCP newsletters</description>
    <inlineHelpText>This confirms the HCP has agreed to receiving HCP newsletters</inlineHelpText>
    <label>HCP Newsletter</label>
    <type>Checkbox</type>
</CustomField>