force-app/main/default/objects/Contact/fields/Health_Care_Professional__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Professional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Care Professional</label>
    <type>Checkbox</type>
</CustomField>