force-app/main/default/objects/Contact/fields/Healthcare_Professional_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Professional_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For healthcare professionals</inlineHelpText>
    <label>Healthcare Professional Newsletter</label>
    <type>Checkbox</type>
</CustomField>