force-app/main/default/objects/Contact/fields/Healthcare_Professional_NewsletterBackup__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Professional_NewsletterBackup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthcare Professional NewsletterBackup</label>
    <type>Checkbox</type>
</CustomField>