force-app/main/default/objects/Contact/fields/HealthcareExecutive__c.field-meta.xml
<CustomField>
    <fullName>HealthcareExecutive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthcare Executive</label>
    <type>Checkbox</type>
</CustomField>