force-app/main/default/objects/Contact/fields/Heart_Angel_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Heart_Angel_Deceased_Date__c</fullName>
    <label>Heart Angel Deceased Date</label>
    <type>Date</type>
</CustomField>