force-app/main/default/objects/Contact/fields/Heart_Angel_Name__c.field-meta.xml
<CustomField>
    <fullName>Heart_Angel_Name__c</fullName>
    <label>Heart Angel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>