force-app/main/default/objects/Contact/fields/Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Heart_Conditions_Other__c</fullName>
    <label>Heart Conditions - Other</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>