force-app/main/default/objects/Contact/fields/Heartbead_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Heartbead_Indemnity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heartbead Indemnity</label>
    <type>Checkbox</type>
</CustomField>