force-app/main/default/objects/Contact/fields/HeartKid_person_to_whom_you_connected__c.field-meta.xml
<CustomField>
    <fullName>HeartKid_person_to_whom_you_connected__c</fullName>
    <label>Name of the heart kid you&apos;re connected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>