force-app/main/default/objects/Contact/fields/HK_can_use_my_info_to_support_me_us__c.field-meta.xml
<CustomField>
    <fullName>HK_can_use_my_info_to_support_me_us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HK can use my info to support me/us</label>
    <type>Checkbox</type>
</CustomField>