force-app/main/default/objects/Contact/fields/HKL_Board_Applicant__c.field-meta.xml
<CustomField>
    <fullName>HKL_Board_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HKL Board Applicant</label>
    <type>Checkbox</type>
</CustomField>