force-app/main/default/objects/Contact/fields/HKL_Staff__c.field-meta.xml
<CustomField>
    <fullName>HKL_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HKL Staff</label>
    <type>Checkbox</type>
</CustomField>