force-app/main/default/objects/Contact/fields/HL_Community_Groups__c.field-meta.xml
<CustomField>
    <fullName>HL_Community_Groups__c</fullName>
    <description>These are the Higher Logic Community Groups the Contact belongs to</description>
    <inlineHelpText>These are the Higher Logic Community Groups the Contact belongs to</inlineHelpText>
    <label>HL Community Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Teens</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>Parents/Carers</fullName>
            </value>
            <value>
                <fullName>Bereaved</fullName>
            </value>
            <value>
                <fullName>Health Care Professionals</fullName>
            </value>
            <value>
                <fullName>ANZFAC</fullName>
            </value>
            <value>
                <fullName>Better Beginnings 0-2yrs</fullName>
            </value>
            <value>
                <fullName>Better Beginnings 2-4yrs</fullName>
            </value>
            <value>
                <fullName>Better Starts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>