force-app/main/default/objects/Contact/fields/HL_Directory_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>HL_Directory_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Higher Logic Community Group field</description>
    <inlineHelpText>Higher Logic Community Group field</inlineHelpText>
    <label>HL Directory Opt Out</label>
    <type>Checkbox</type>
</CustomField>