force-app/main/default/objects/Contact/fields/HL_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>HL_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the group of people who have registered for our online community</description>
    <inlineHelpText>This is the group of people who have registered for our online community</inlineHelpText>
    <label>HL-Is Active</label>
    <type>Checkbox</type>
</CustomField>