force-app/main/default/objects/Contact/fields/HL_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>HL_Mod_Date__c</fullName>
    <label>HL_Mod_Date__c</label>
    <type>DateTime</type>
</CustomField>