force-app/main/default/objects/Contact/fields/Hospital_Administration__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Administration</label>
    <type>Checkbox</type>
</CustomField>