force-app/main/default/objects/Contact/fields/Hospital_PR__c.field-meta.xml
<CustomField>
    <fullName>Hospital_PR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital PR</label>
    <type>Checkbox</type>
</CustomField>