force-app/main/default/objects/Contact/fields/Is_a_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Fundraiser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via Process Builder the first time this Contact is associated with a Fundraising Page type Campaign via the Page Owner lookup field</description>
    <label>Is a Fundraiser</label>
    <type>Checkbox</type>
</CustomField>