force-app/main/default/objects/Contact/fields/Is_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Is_Dependent__c</fullName>
    <formula>IF((NOT(ISNULL( Age__c )) &amp;&amp; Age__c &lt; 13), true, false)</formula>
    <label>Is Dependent</label>
    <type>Checkbox</type>
</CustomField>