force-app/main/default/objects/Contact/fields/Is_PayPal_Giving_Fund__c.field-meta.xml
<CustomField>
    <fullName>Is_PayPal_Giving_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by MoveData to help identify repeat PayPal Giving Fund contacts who have not supplied their email address</description>
    <label>Is PayPal Giving Fund</label>
    <type>Checkbox</type>
</CustomField>