force-app/main/default/objects/Contact/fields/Is_Primary_Carer__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Carer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Parent/Carer is selected in &apos;Personal Connection to CoHD&apos; field on HL Connect Form then it&apos;s Primary Carer.</inlineHelpText>
    <label>Is Primary Carer</label>
    <type>Checkbox</type>
</CustomField>