force-app/main/default/objects/Contact/fields/Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If any value is selected other than Parent/Carer in &apos;Personal Connection to CoHD&apos; field on HL Connect Form then it&apos;s Primary Contact.</inlineHelpText>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>