force-app/main/default/objects/Contact/fields/Is_Referral_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Referral_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Referral Form Sent</label>
    <type>Checkbox</type>
</CustomField>